[package]
name = "structopt-external-doc"
version = "0.1.0"
authors = ["Thi <swfsql@gmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.structopt]
version = "0.3.15"
features = ["unstable_external_doc"]

[patch.crates-io.structopt]
git = "https://github.com/swfsql/structopt"
rev = "9b004fb"